feat: #65 updates deps and test vars